Updated XNN Content

--- a/localisation/english/DEN_USA/XNN_l_english.yml
+++ b/localisation/english/DEN_USA/XNN_l_english.yml
@@ -10,10 +10,10 @@
  XNN_ADJ:0 "New English"
  
  NXX_great_depression:0 "Great Depression"
- NXX_great_depression_desc:0 "The state of the new english economy is bad."
+ NXX_great_depression_desc:0 "Caused by a stockmarket crash the Great Depression has ruined the New English economy."
  
  NXX_new_english_spirit:0 "New English Spirit"
- NXX_new_english_spirit_desc:0 "The new english have never been one to be easily subjugated and as such they are ready to defend their homeland."
+ NXX_new_english_spirit_desc:0 "The New English have never been one to be easily subjugated and as such they are ready to defend their homeland."
  
  NXX_sacred_heart_movement:0 "Sacred Heart Movement"
  NXX_sacred_heart_movement_desc:0 "The Sacred Heart Movement is a catholic movement seeking to establish a fascist theocracy in new england."
