--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -7,3 +7,4 @@
  XAL_neutrality_party:0 "House of Al-Waahid"
  XAL_gerges_al_waahid:0 "Gerges Al-Waahid"
  XAL_king_gerges_i:0 "King Gerges I"
+ VICTORY_POINTS_492:0 "Al-Hashimi"
