wyoming starter content

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -2,4 +2,11 @@
  XWY: "Wyoming"
  XWY_DEF: "Wyoming"
  XWY_ADJ: "Wyoming"
+ VICTORY_POINTS_4723:0 "Cheyenne"
+ VICTORY_POINTS_12651:0 "Jackson"
+ VICTORY_POINTS_4610:0 "Buffalo"
+ VICTORY_POINTS_12633:0 "Rock Springs"
+ VICTORY_POINTS_4820:0 "Devils Tower"
+ XWY_great_depression:0 "The Great Depression"
+ XWY_the_cowboy_state:0 "The Cowboy State"
  
