--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -4,7 +4,13 @@
  XAL_ADJ: "Al-Abamian"
  XAL_neutrality:0 "Arab Kingdom of Al-Abama"
  XAL_neutrality_DEF:0 "the Arab Kingdom of Al-Abama"
- XAL_neutrality_party:0 "House of Al-Waahid"
- XAL_gerges_al_waahid:0 "Gerges Al-Waahid"
+ XAL_fascism:0 "Islamic State of Al-Abama"
+ XAL_fascism_DEF:0 "the Islamic State of Al-Abama"
+ XAL_fascism_party:0 "IFA"
+ XAL_fascism_party_long:0 "Islamic Front of Al-Abama"
+ XAL_neutrality_party:0 "House of al-Waahid"
+ XAL_gerges_al_waahid:0 "Gerges al-Waahid"
  XAL_king_gerges_i:0 "King Gerges I"
  VICTORY_POINTS_492:0 "Al-Hashimi"
+ XAL_islamic_warrior:0 "Islamic Warrior"
+ XAL_yahya_odeh_al_pirani:0 "Yahya Odeh al-Pirani"
