--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -14,4 +14,6 @@
  srp_1:0 "§GSmall Ranches Influence Increases by 1§!"
  current_status_wyoming_tt:0 "§YCattle Baron Influence: [?cattle_baron_power]§!"
  current_status_small_wyoming_tt:0 "§YSmall Ranches Influence: [?small_ranches_power]§!"
+ srp_2:0 "§RSmall Ranches Influence Decreases by 1§!"
+ XWY_cattle_grantsidea:0 "Cattle Grants"
  
