--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -17,3 +17,4 @@
  srp_2:0 "§RSmall Ranches Influence Decreases by 1§!"
  XWY_cattle_grantsidea:0 "Cattle Grants"
  srp_3:0 "§GSmall Ranches Influence Increases by 2§!"
+ wyoming_test_var_tt:0 "Testing"
