--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -14,3 +14,7 @@
  VICTORY_POINTS_492:0 "Al-Hashimi"
  XAL_islamic_warrior:0 "Islamic Warrior"
  XAL_yahya_odeh_al_pirani:0 "Yahya Odeh al-Pirani"
+ XAL_saud_asghar:0 "Saud Asghar"
+ XAL_tariq_abd_hassan:0 "Tariq Abd Hassan"
+ XAL_wafiq_miftah:0 "Wafiq Miftah"
+ XAL_chawki_al_akhtam:0 "Chawki al-Akhtam"
