--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -18,3 +18,5 @@
  XAL_tariq_abd_hassan:0 "Tariq Abd Hassan"
  XAL_wafiq_miftah:0 "Wafiq Miftah"
  XAL_chawki_al_akhtam:0 "Chawki al-Akhtam"
+ XAL_alabama_division:0 "Islamist-Loyalist Split"
+ XAL_muslim_bastion:0 "American Bastion of Islam"
