pushing out my map changes

--- a/localisation/english/DEN_USA/XMD_l_english.yml
+++ b/localisation/english/DEN_USA/XMD_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
- XMD: "Maryland"
- XMD_DEF: "Maryland"
- XMD_ADJ: "Maryland"
- 
+ XMD: "United States"
+ XMD_DEF: "the United States of America Reclamation Committee"
+ XMD_ADJ: "Bidenian"
+ STATE_935: "Northampton"
+ VICTORY_POINTS_3917: "Exmore"
