I changed the provincemap slightly
-Added 2 states (Willamette and Portland)
-Added 2 provinces to Portland (taken from iceland)
-Added flag
-Added starting leader

--- a/localisation/english/DEN_USA/XOR_l_english.yml
+++ b/localisation/english/DEN_USA/XOR_l_english.yml
@@ -2,4 +2,12 @@
  XOR: "Oregon"
  XOR_DEF: "Oregon"
  XOR_ADJ: "Oregon"
+
+ STATE_936: "Portland"
+ STATE_937: "Willamette"
+ VICTORY_POINTS_12689: "Portland"
+ VICTORY_POINTS_4328: "Salem"
+ VICTORY_POINTS_4274: "Bend"
+ VICTORY_POINTS_12674: "Gresham"
+
  
