--- a/localisation/english/DEN_USA/XNV_l_english.yml
+++ b/localisation/english/DEN_USA/XNV_l_english.yml
@@ -2,6 +2,8 @@
  XNV: "Nevada"
  XNV_DEF: "Nevada"
  XNV_ADJ: "Nevada"
+ 
+ STATE_938: "Lower Nevada"
 
-VICTORY_POINTS_4607:0 "Carson City"
-VICTORY_POINTS_4799:0 "Las Vegas"
+ VICTORY_POINTS_4607:0 "Carson City"
+ VICTORY_POINTS_4799:0 "Las Vegas"
