Added VPs to Utah and added Utah to the bookmark.

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -3,3 +3,6 @@
  XUT_DEF: "Utah"
  XUT_ADJ: "Utah"
  
+ VICTORY_POINTS_10582:0 "Logan"
+ VICTORY_POINTS_12699:0 "St. George"
+ VICTORY_POINTS_1756:0 "Moab"
