4 Corner States New VPs

--- a/localisation/english/DEN_USA/XCO_l_english.yml
+++ b/localisation/english/DEN_USA/XCO_l_english.yml
@@ -3,3 +3,8 @@
  XCO_DEF: "Colorado"
  XCO_ADJ: "Colorado"
  
+ VICTORY_POINTS_7780:0 "Fort Collins"
+ VICTORY_POINTS_12627:0 "Pueblo"
+ VICTORY_POINTS_10588:0 "Colorado Springs"
+ VICTORY_POINTS_6887:0 "Grand Junction"
+ VICTORY_POINTS_9792:0 "Durango"
