its moddin time

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -18,3 +18,10 @@
  XWY_cattle_grantsidea:0 "Cattle Grants"
  srp_3:0 "§GSmall Ranches Influence Increases by 2§!"
  wyoming_test_var_tt:0 "Testing"
+ XWY_fascism_party:0 "United Front"
+ XWY_fascism_party_long:0 "United Front Against Communism"
+ XWY_communism_party:1 "Reds"
+ XWY_communism_party_long:2 "Red Socialist Party"
+ XWY_democratic_party:0 "Democratic Party"
+ XWY_democratic_party_long:0 "Democratic Party"
+ XWY_neutrality_party:1 "Nationalist"
