Al-Abama shall join the bookmark inshallah

--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -39,6 +39,7 @@
  XAL_a_strong_king:0 "A §RStrong§! King"
  XAL_a_generous_king:0 "A §GGenerous§! King"
  XAL_public_sector_investments:0 "Public Sector Investments"
+ XAL_boomark_desc:0 "The Al-Abaman nation might be one of the most interesting factions that has risen to prominence after the collapse of the United States, being the only muslim nation on the entire New World as of now. The nation formed as a result of the Islamic Revolution, where disillusioned Alabamans rose up against the Federal Government, seeing Islam as their last hope."
 
 
 
