--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -25,3 +25,24 @@
  XWY_democratic_party:0 "Democratic Party"
  XWY_democratic_party_long:0 "Democratic Party"
  XWY_neutrality_party:1 "Nationalist"
+ XWY_the_great_west:0 "The Great West"
+ XWY_fund_the_ranches:0 "Fund the Ranches"
+ XWY_aid_big_cattle:0 "Aid Big Cattle"
+ XWY_hand_land:0 "Handout Land"
+ XWY_cattle_grants:0 "Cattle Grants"
+ XWY_beef_bonanza:0 "Beef Bonanza"
+ XWY_reintroduce_buffalo:0 "Reintroduce The Buffalo"
+ XWY_corporatism:0 "Corporatism"
+ XWY_the_wyoming_political_scene:0 "Wyoming Politics"
+ XWY_commitee_for_industrilization:0 "Industrilisation Council"
+ XWY_collective_ranches:0 "Collective Ranches"
+ XWY_social_change:0 "Social Change"
+ XWY_king_and_state:0 "King and State"
+ XWY_assemble_a_regency:0 "Assemble a Regency"
+ XWY_a_king:0 "The Question of a King"
+ XWY_a_alabaman_king:0 "a Alabaman King"
+ XWY_our_own_king:0 "Our King"
+ XWY_consolidate_power:0 "Consolidate Power"
+ XWY_claim_the_kingdom_title:0 "The Kingdom of Wyoming"
+ XWY_expand_the_ranch_wars:0 "Expand the Ranch Wars"
+ XWY_returning_to_the_past:0 "The Rocky Principles"
