Added civil war mechanics, on actions, ideas, and focus effects for Utah.

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -4,8 +4,10 @@
  XUT_ADJ: "Utah"
  
  STATE_939:0 "Moab"
- STATE_940:0 "Lower Colorado"
+ STATE_940:0 "Lower Utah"
  
  VICTORY_POINTS_10582:0 "Logan"
  VICTORY_POINTS_12699:0 "St. George"
  VICTORY_POINTS_1756:0 "Moab"
+ 
+ four_year_plan_tooltip:0 "§YThis focus will enable the 4 Year Plan.§!"
