--- a/localisation/english/DEN_USA/BKH_l_english.yml
+++ b/localisation/english/DEN_USA/BKH_l_english.yml
@@ -61,3 +61,22 @@
  STATE_950: "Billings"
  STATE_951: "South Montana"
  STATE_952: "North Montana"
+
+ VICTORY_POINTS_6742: "Missoula"
+ VICTORY_POINTS_7779: "Helena"
+ VICTORY_POINTS_11712: "North Great Falls"
+ VICTORY_POINTS_4741: "Bozeman"
+ VICTORY_POINTS_4857: "Billings"
+ VICTORY_POINTS_13273: "Flathead Reservation"
+ VICTORY_POINTS_1767: "Miles City"
+ VICTORY_POINTS_10593: "Havre"
+ VICTORY_POINTS_10685: "Fargo"
+ VICTORY_POINTS_10595: "Sioux Falls"
+ VICTORY_POINTS_10709: "Minot"
+ VICTORY_POINTS_3719: "Grand Forks"
+ VICTORY_POINTS_4759: "Williston"
+ VICTORY_POINTS_12685: "Devils Lake"
+ VICTORY_POINTS_7862: "Aberdeen"
+ VICTORY_POINTS_12667: "Brookings"
+ VICTORY_POINTS_12620: "Pierre"
+ VICTORY_POINTS_7745: "Edgemont"
