New states for 4 corners + Nevada loc fix.
No clue what was wrong with the loc file. Just kinda bugged me. Not the guy's fault. Looks identical. Weird.

--- a/localisation/english/DEN_USA/XCO_l_english.yml
+++ b/localisation/english/DEN_USA/XCO_l_english.yml
@@ -8,3 +8,6 @@
  VICTORY_POINTS_10588:0 "Colorado Springs"
  VICTORY_POINTS_6887:0 "Grand Junction"
  VICTORY_POINTS_9792:0 "Durango"
+ 
+ STATE_956:0 "Grand Junction"
+ STATE_957:0 "Colorado Plains"
