--- a/localisation/english/DEN_USA/XNM_l_english.yml
+++ b/localisation/english/DEN_USA/XNM_l_english.yml
@@ -5,3 +5,7 @@
  
  VICTORY_POINTS_12684:0 "Santa Fe"
  VICTORY_POINTS_12791:0 "Las Cruces"
+ VICTORY_POINTS_10914:0 "Silver City"
+ 
+ STATE_954:0 "Santa Fe"
+ STATE_955:0 "Western New Mexico"
