more XWY content

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -46,3 +46,17 @@
  XWY_claim_the_kingdom_title:0 "The Kingdom of Wyoming"
  XWY_expand_the_ranch_wars:0 "Expand the Ranch Wars"
  XWY_returning_to_the_past:0 "The Rocky Principles"
+ XWY_look_outwards:0 "Looking Outwards"
+ XWY_the_new_age:0 "The New Age"
+ XWY_ban_other_parties:0 "Ban Rival Parties"
+ XWY_soldiers_wyoming:0 "Reform The Army"
+ XWY_state_owned_industry:0 "State-Owned Industry"
+ XWY_the_new_state:0 "The New State"
+ XWY_cheyenne_rally:0 "Cheyenne Rally"
+ XWY_conspire_with_the_military:0 "Conspire with The Military"
+ XWY_rally_the_populace:0 "Rally the People"
+ XWY_a_local_revolution:0 "Local Revolution"
+ XWY_the_united_revolution:0 "Nationwide Revolution"
+ XWY_our_red_army:0 "Create the Red Army"
+ XWY_fuel_the_propaganda_machine:0 "Fuel the Propaganda Machine"
+ XWY_millard_simpson:0 "Millward Simpson"
