Utah Democratic Path

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -11,3 +11,4 @@
  VICTORY_POINTS_1756:0 "Moab"
  
  four_year_plan_tooltip:0 "§YThis focus will enable the 4 Year Plan.§!"
+ purge_mormons_tooltip:0 "§RThis decision will have unintended consequences...§!"
