focus tree icons and other stuff

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -60,3 +60,6 @@
  XWY_our_red_army:0 "Create the Red Army"
  XWY_fuel_the_propaganda_machine:0 "Fuel the Propaganda Machine"
  XWY_millard_simpson:0 "Millward Simpson"
+ XWY_COM_1:0 "The United Communes of America"
+ XWY_COM_2:0 "Unified Peoples Republics"
+ XWY_COM_3:0 "The Peoples Republic of America"
