--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -39,6 +39,14 @@ XTN_inteligensia_manifesto_desc:0 "Written by Trotsky, Intelligentsia Manifesto 
 XTN_rapid_urbanization:0 "Rapid Urbanization"
 XTN_rapid_urbanization_desc:0 "Fast progress can cause some temporary downturn."
  
+XTN_legalized_drugs:0 "Legalized Drugs"
+XTN_legalized_drugs_desc:0 "We have legalized all psychoactive substances that will fuel our economy!"
+
+XTN_drug_trade:0 "Drug Trade"
+XTN_drug_trade_desc:0 "Since legalization of drugs our state has started to trade all over Americas bringing us some profit."
+
+
+
  
  XTN_abolish_council:0 "Abolish Council"
  XTN_abolish_council_desc:0 "Non existing leader proves to be a disadvantage rather than solution."
@@ -66,3 +74,20 @@ XTN_rapid_urbanization_desc:0 "Fast progress can cause some temporary downturn."
 
  XTN_finallize_manifesto:0 "Finallize Manifesto"
  XTN_finallize_manifesto_desc:0 "All points of Intelligentsia manifesto were fulfilled! Tennesseeians can now calm down."
+
+
+
+ XTN_prepare_ground:0 "Prepare Ground"
+ XTN_prepare_ground_desc:0 "We must create Anarchist Society in the name of Stirner, but people aren't ready yet. We must prepare them for the change."
+
+ XTN_legalize_drugs:0 "Legalize Drugs"
+ XTN_legalize_drugs_desc:0 "We must legalize drugs in the name of science and liberty!"
+
+ XTN_drug_trade:0 "Drug Trade"
+ XTN_drug_trade_desc:0 "After legalization of drugs we must trade them all over America. This will bring us a lot of profit."
+
+ XTN_stirner:0 "Spread word of Stirner"
+ XTN_stirner_desc:0 "Our temporary government will spread copies of Ego and it's own around the nation."
+
+ XTN_arm_people:0 "Arm the people"
+ XTN_arm_people_desc:0 "Our rights can only be protected by armed militias. We must arm the population!"
