we do a little XWY focus tree progress

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -40,7 +40,7 @@
  XWY_king_and_state:0 "King and State"
  XWY_assemble_a_regency:0 "Assemble a Regency"
  XWY_a_king:0 "The Question of a King"
- XWY_a_alabaman_king:0 "a Alabaman King"
+ XWY_a_alabaman_king:0 "a British King"
  XWY_our_own_king:0 "Our King"
  XWY_consolidate_power:0 "Consolidate Power"
  XWY_claim_the_kingdom_title:0 "The Kingdom of Wyoming"
